# COMP10050

./: CMakeLists.txt  Test Cases.txt  Twitter_Project_Description_21739631.docx  delete_account.c  delete_account.h  follow_AND_unfollow.c  follow_AND_unfollow.h  main.c  menu_functionalities.c  menu_functionalities.h  tweet_functionalities.c  tweet_functionalities.h  twitter_create.c  twitter_create.h
