cmake_minimum_required(VERSION 3.21)
project(Assignment_2___Project_Directory C)

set(CMAKE_C_STANDARD 11)

add_executable(Assignment_2___Project_Directory main.c twitter_create.h twitter_create.c follow_AND_unfollow.c follow_AND_unfollow.h menu_functionalities.c menu_functionalities.h tweet_functionalities.c tweet_functionalities.h delete_account.c delete_account.h)
